--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,20 +1,12 @@
 sv_port 8303
 sv_rcon_password 123123
-sv_name "  - Deathmatch++ - "
-sv_motd "visit teeworlds.com/forum for more"
+sv_name " - Ninslash Invasion - "
+sv_motd "visit ninslash.com for more"
 
-sv_gametype coop
-sv_map generate_large1
-# sv_maprotation dm7 dm6 dm2
+sv_gametype coop;
+sv_mapgen 1; sv_mapgen_random_seed 1; sv_mapgen_seed 1;adawasdxz
+sv_survivalmode 1;
+sv_inactivekick_time 0;
+sv_botsskippickups 1;
 
-sv_scorelimit 30
-
-sv_vanillapickups 1
-sv_instadeathtiles 1
-sv_weapondrops 1
-
-sv_preferredteamsize 5
-
-sv_randomweapons 1
-
-sv_bot_react_time 6
+sv_map generate_large1; sv_maprotation generate_large1;
