--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,12 +3,12 @@ sv_rcon_password 123123
 sv_name " - Ninslash Invasion - "
 sv_motd "visit ninslash.com for more"
 
-sv_gametype coop;
+sv_gametype coop
 sv_mapgen 1; sv_mapgen_random_seed 1; sv_mapgen_seed 1;adawasdxz
 sv_survivalmode 1;
 sv_inactivekick_time 0;
 sv_botsskippickups 1;
 
-sv_register ipv6
+sv_register ipv4
 
 sv_map generate_large1; sv_maprotation generate_large1;
